workspace/MJCompiler/test/syntaxerrors/assignment.mj
program assignment 
	int x;
	
{
	void main() int a; int b[];{
	x = b + -;		 //not ok
	x = 2;
	a=;;;;;;		//not ok
	b = new int [7];
	b[0] = 0;
	b[1] = 1;
	b[2] = 2;
	b[3] = 3;
	a = x*1+b[3]+b[2]/b[1] + b[1]%b[3]; 
	a= x++ + (x*7)+b[1];			//not ok
	a = x + (x*7**2) + b[2];		//not ok
	  
	[a,b,,]= b + 5 ; //not ok
	
	
	}
}